traffic-split/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: trivago-gateway
  namespace: trivago-webserver
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - trivago.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
